web-infras/parser/tests/fixtures/babel/core/uncategorised/517/output.txt
[SyntaxError]: duplicate params (1,44)
1|function a() { "use strict"; function b(t, t) { }; }
 |                                          ^
